Fix crash when handling WM_PAINT during COM operations

Synchronous expose corrupts painter state if it is done during existing
paint operation, which can happen e.g. when requesting some value from
dumpcpp generated wrapper inside a slot.

Fixed by setting platform native interface property "asyncExpose"
when application uses ActiveQt. This allows Windows QPA plugin to
do an asynchronous exposes instead of synchronous.

Task-number: QTBUG-27209
Change-Id: I93595c1d1dc01601f7a8c4562a145bebb29268b6